fix: fixed theme display feat: language translation

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,8 @@
 {
   "main": {
-    "header": "Current work week"
+    "currWorkWeek": "Current work week",
+    "home": "Home",
+    "tasks": "Tasks",
+    "designer": "For the designer"
   }
 }
