--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,5 +1,8 @@
 {
   "main": {
-    "header": "Текущая рабочая неделя"
+    "currWorkWeek": "Текущая рабочая неделя",
+    "home": "Главная",
+    "tasks": "Задачи",
+    "designer": "Для дизайнера"
   }
 }
